# diffproject

./: Dugnikov_4g94stok_NoIMMO.hex  Freebsd.txt  client.p12  createdeb.sh  createrpm (1).sh  install redos 7.3.txt  install.sh  install_postgres.sh  join-to-domain.sh
eca-feature-78215/eca-feature-78215/: .gitattributes  .gitlab-ci.yml  CHANGELOG.md  LICENSE  README.md
eca-feature-78215/eca-feature-78215/docs/: README.md
eca-feature-78215/eca-feature-78215/docs/nginx.conf/: TODO
eca-feature-78215/eca-feature-78215/src/: README.md
eca-feature-78215/eca-feature-78215/src/aeca-CA/: README.md  pom.xml
eca-feature-78215/eca-feature-78215/src/aeca-CLI/: README.md  pom.xml
eca-feature-78215/eca-feature-78215/src/aeca-COE/src/main/opensslfasad/: CMakeLists.txt  OpenSSLFasadTest.h  libJniTest.h  opensslfasad.cpp  readme
eca-feature-78215/eca-feature-78215/src/aeca-COE/src/main/opensslfasad/common/: opensslx509tools.cpp  opensslx509tools.h
eca-feature-78215/eca-feature-78215/src/aeca-COE/src/main/opensslfasad/testjava/: OpenSSLFasadTest.java  ShowJniTest.java  compile_java  libJniTest.java  runjava.sh
eca-feature-78215/eca-feature-78215/src/aeca-COE/src/main/opensslfasad/testopensslfasad/: CMakeLists.txt  main.cpp
scripts/: auxiliary_aeca_database_cleanup.sh  auxiliary_aeca_database_setup.sh  auxiliary_aeca_setup.sh  auxiliary_default_properties_setup.sh  auxiliary_ejbca_database_cleanup.sh  auxiliary_ejbca_database_setup.sh  auxiliary_ejbca_setup.sh  auxiliary_wildfly_setup.sh  config.sh  install.sh  uninstall.sh
(+119 files in other folders)
